Add Sign in and Sign Up Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primer">#d1495b</color>
     <color name="sekunder">#08415c</color>
     <color name="lines">#A9A9A9	</color>
+    <color name="kuning">#efd121</color>
 </resources>
