--- a/app/src/main/res/drawable/btn_round.xml
+++ b/app/src/main/res/drawable/btn_round.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/primer"/>
-    <corners android:radius="20dp"/>
+    <solid android:color="@color/kuning"/>
+    <corners android:radius="8dp"/>
 </shape>
