--- a/app/src/main/res/layout/activity_cust_list_product.xml
+++ b/app/src/main/res/layout/activity_cust_list_product.xml
@@ -4,18 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.customer.CustHomeActivity">
+    tools:context=".ui.customer.CustListProductActivity">
 
-    <GridView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/homeGridMenu"
-        android:numColumns="2"
+        android:id="@+id/lvProduct"
         android:layout_marginTop="20dp"
+        android:layout_marginVertical="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-    </GridView>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
