--- a/app/src/main/res/layout/activity_cust_select_tailor.xml
+++ b/app/src/main/res/layout/activity_cust_select_tailor.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.customer.CustHomeActivity">
+    tools:context=".ui.customer.CustSelectTailor">
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/homeGridMenu"
+        android:layout_height="match_parent"
+        android:id="@+id/gridViewTaylor"
         android:numColumns="2"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginHorizontal="5dp"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
